# Chat_with_DB

./: README.md  config.ini  config.py  pyproject.toml  requirements.txt  student.db
src/: main.py  model.py
ui/: app.py
